Bug 1237210: [ffmpeg] P2. Reduces threads use in FFmpeg video decoder. r=gerald

We use the same logic as what is used in libvpx to ensure that we won't get a regression due to excessive memory/thread use when replacing libvpx with ffmpeg.